--- a/admin/index.html
+++ b/admin/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="utf-8" />
     <title>Content Manager</title>
-    <script src="https://unpkg.com/decap-cms@latest/dist/decap-cms.js"></script>
 </head>
 <body>
+    <script src="https://cdn.jsdelivr.net/npm/decap-cms@3.6.2/dist/decap-cms.js"></script>
     <script>
-        CMS.init();
+        document.addEventListener("DOMContentLoaded", function() {
+            console.log("Initializing CMS...");
+            CMS.init();
+            console.log("CMS initialized.");
+        });
     </script>
 </body>
 </html>
