--- a/admin/index.html
+++ b/admin/index.html
@@ -5,7 +5,7 @@
     <title>Content Manager</title>
 </head>
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/decap-cms@3.6.2/dist/decap-cms.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/decap-cms@latest/dist/decap-cms.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             console.log("Initializing CMS...");
