--- a/index.html
+++ b/index.html
@@ -150,5 +150,6 @@
           $('[data-bs-toggle="tooltip"]').tooltip();
       })
     </script>
+    <script src="app.js"></script>
   </body>
 </html>
